FAQ update & complaints
Signed-off-by: Akash Ravi <akashkravi@gmail.com>

--- a/Vue-Project/public/FAQ.html
+++ b/Vue-Project/public/FAQ.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
-      href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700"
-      rel="stylesheet"
-      type="text/css"
+      href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css"
     />
 
-    <link rel="stylesheet" href="faqreset.css" />
+    <link rel="stylesheet" href="css/reset.css" />
     <!-- CSS reset -->
-    <link rel="stylesheet" href="faqstyle.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Resource style -->
+    <script src="js/modernizr.js"></script>
     <title>FAQ</title>
   </head>
   <body>
@@ -164,8 +163,8 @@
 
           <li>
             <a class="cd-faq-trigger" href="#0"
-              >What is the eligibility criteria for opening an Patronus Bank
-              Basic Savings Bank Account?</a
+              >What is the eligibility criteria for opening an ICICI Bank Basic
+              Savings Bank Account?</a
             >
             <div class="cd-faq-content">
               <p>
@@ -182,7 +181,7 @@
           <li>
             <a class="cd-faq-trigger" href="#0"
               >What is the minimum balance required to be maintained for an
-              Patronus Bank Basic Savings Bank Account?</a
+              ICICI Bank Basic Savings Bank Account?</a
             >
             <div class="cd-faq-content">
               <p>
@@ -446,5 +445,8 @@
       <a href="#0" class="cd-close-panel">Close</a>
     </section>
     <!-- cd-faq -->
+    <script src="js/jquery-2.1.1.js"></script>
+    <script src="js/jquery.mobile.custom.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
